<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" > 
	
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"> 
        
    <ToggleButton 
    android:textOn="@string/toggle1On"
    android:textOff="@string/toggle1Off"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="showToggleButton1"
    android:id="@+id/toggle1"
    />
    
     
    <ToggleButton 
    android:textOn="@string/toggle2On"
    android:textOff="@string/toggle2Off"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="showToggleButton2"
    android:id="@+id/toggle2"
    />
    
    <ToggleButton 
    android:textOn="@string/toggle3On"
    android:textOff="@string/toggle3Off"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="showToggleButton3"
    android:id="@+id/toggle3"
    />
    </LinearLayout> 
    <TextView 
        android:id="@+id/area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black" 
        /> 

</LinearLayout>
